# bev-lidar

./: CMakeLists.txt  README.md  package.xml
config/: bev_lidar.param.yaml
include/bev_lidar/: bev_lidar.hpp  bev_lidar_node.hpp  bev_lidar_offline_node.hpp  visibility_control.hpp
include/bev_lidar/cloud_filter/: cloud_filter.hpp
launch/: bev_lidar.launch.py
scripts/: birdview_detection_refiner.py  detections_refinement.py  draw_bev_detections.py
src/: bev_lidar.cpp  bev_lidar_node.cpp  bev_lidar_offline_node.cpp
src/cloud_filter/: cloud_filter.cpp
test/: test_bev_lidar.cpp
